[package]
name = "track"
version = "0.1.0"
authors = ["Lucas Ference <ference.lucas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "3.0"
chrono = "0.4"